@@ -14,12 +14,12 @@
  * @auhtor    Rudy <webmaster@queenarena.com>
  * @author    Matteo Scaramuccia <matteo@phpmyfaq.de>
  * @author    Amedeo Fragai <amedeo.fragai@scasrl.it>
+ * @author    Agnese Morettini <agnese.morettini@gmail.com>
  * @copyright 2004-2015 phpMyFAQ Team
  * @license   http://www.mozilla.org/MPL/2.0/ Mozilla Public License Version 2.0
  * @link      http://www.phpmyfaq.de
  * @since     2004-06-24
  */
-
 $PMF_LANG['metaCharset'] = 'UTF-8';
 $PMF_LANG['metaLanguage'] = 'it';
 $PMF_LANG['language'] = 'Italian';
@@ -34,11 +34,11 @@ $PMF_LANG['msgOpenQuestions'] = 'Domande aperte';
 $PMF_LANG['msgHelp'] = 'Aiuto';
 $PMF_LANG['msgContact'] = 'Contatti';
 $PMF_LANG['msgHome'] = 'Home';
-$PMF_LANG['msgNews'] = ' News';
-$PMF_LANG['msgUserOnline'] = ' Utenti Online';
+$PMF_LANG['msgNews'] = 'News';
+$PMF_LANG['msgUserOnline'] = 'Utenti Online';
 $PMF_LANG['msgXMLExport'] = 'XML-File';
-$PMF_LANG['msgBack2Home'] = 'indietro alla home';
-$PMF_LANG['msgFullCategories'] = 'Elenco delle categorie';
+$PMF_LANG['msgBack2Home'] = 'Torna alla pagina principale';
+$PMF_LANG['msgFullCategories'] = 'Elenco categorie';
 $PMF_LANG['msgFullCategoriesIn'] = 'Categorie con FAQ in ';
 $PMF_LANG['msgSubCategories'] = 'Sottocategorie';
 $PMF_LANG['msgEntries'] = 'FAQ';
@@ -88,28 +88,28 @@ $PMF_LANG['msgSearchAmounts'] = ' risultati per la tua ricerca';
 $PMF_LANG['msgSearchCategory'] = 'Categoria: ';
 $PMF_LANG['msgSearchContent'] = 'Contenuto: ';
 $PMF_LANG['msgNewContentHeader'] = 'Proposta per una FAQ';
-$PMF_LANG['msgNewContentAddon'] = 'La tua proposta non sar&agrave; pubblicata immediatamente ma sar&agrave; pubblicata dall\'amministratore dopo la sua validazione.<br />I campi richiesti sono il <strong>tuo Nome</strong>, il <strong>tuo indirizzo email</strong>, la <strong>categoria</strong>, il <strong>titolo</strong> e il <strong>testo</strong>.<br />Ricordati di separare le parole chiave con lo spazio.';
-$PMF_LANG['msgNewContentName'] = 'Il tuo Nome:';
+$PMF_LANG['msgNewContentAddon'] = 'La tua proposta non sarà pubblicata subito, ma sarà pubblicata dall\'amministratore dopo la sua validazione.<br />I campi richiesti sono il <strong>tuo nome</strong>, il <strong>tuo indirizzo e-mail</strong>, la <strong>categoria</strong>, la <strong>domanda</strong> e il <strong>testo</strong>.<br />Ricordati di separare le parole chiave con uno spazio.';
+$PMF_LANG['msgNewContentName'] = 'Il tuo nome:';
 $PMF_LANG['msgNewContentMail'] = 'Il tuo indirizzo email:';
-$PMF_LANG['msgNewContentCategory'] = 'Quale categoria vuoi scegliere?';
-$PMF_LANG['msgNewContentTheme'] = 'Titolo:';
-$PMF_LANG['msgNewContentArticle'] = 'La tua FAQ:';
+$PMF_LANG['msgNewContentCategory'] = 'Categoria:';
+$PMF_LANG['msgNewContentTheme'] = 'Domanda:';
+$PMF_LANG['msgNewContentArticle'] = 'Risposta:';
 $PMF_LANG['msgNewContentKeywords'] = 'Parole chiave:';
 $PMF_LANG['msgNewContentLink'] = 'Link per questa FAQ:';
 $PMF_LANG['msgNewContentSubmit'] = 'Invia';
 $PMF_LANG['msgInfo'] = 'Altre informazioni: ';
 $PMF_LANG['msgNewContentThanks'] = 'Grazie per aver inviato la tua proposta!';
-$PMF_LANG['msgNoQuestionsAvailable'] = 'Al momento non ci sono domande.';
-$PMF_LANG['msgNewQuestion'] = 'Scrivi la tua domanda qui sotto';
-$PMF_LANG['msgAskCategory'] = 'La tua domanda &egrave; sulla categoria:';
+$PMF_LANG['msgNoQuestionsAvailable'] = 'Al momento non ci sono domande in attesa di approvazione.';
+$PMF_LANG['msgNewQuestion'] = 'Scrivi la tua domanda qui sotto:';
+$PMF_LANG['msgAskCategory'] = 'Categoria:';
 $PMF_LANG['msgAskYourQuestion'] = 'La tua domanda:';
-$PMF_LANG['msgAskThx4Mail'] = '<h2>Grazie per aver inviato la tua domanda!</h2>';
+$PMF_LANG['msgAskThx4Mail'] = 'Grazie per aver inviato la tua domanda!';
 $PMF_LANG['msgDate_User'] = 'Data / Utente';
 $PMF_LANG['msgQuestion2'] = 'Domanda';
 $PMF_LANG['msg2answer'] = 'Rispondi';
 $PMF_LANG['msgQuestionText'] = 'Qui puoi vedere le domande fatte da altri utenti. Puoi rispondere a queste domande perché la risposta potrebbe essere inserita nelle FAQ.';
 $PMF_LANG['msgHelpText'] = '<p>L\'accesso alle FAQ (<strong>F</strong>requently <strong>A</strong>sked <strong>Q</strong>uestions, in italiano le <em>Domande Pi&ugrave; frequenti</em>) &egrave; semplice. Puoi effettuare ricerche tramite:<ul><li>le <strong><a href=\"?action=show\">categorie</a></strong>;</li><li>il <strong><a href=\"?action=search\">motore di ricerca</a></strong>, usando opportune parole chiave.</li></ul></p>';
-$PMF_LANG['msgContactEMail'] = 'Spedisci una email al webmaster:';
+$PMF_LANG['msgContactEMail'] = 'Invia un\'e-mail al webmaster:';
 $PMF_LANG['msgMessage'] = 'Il tuo messaggio:';
 $PMF_LANG['msgTopTen'] = 'TOP 10';
 $PMF_LANG['msgHomeThereAre'] = 'Ci sono ';
@@ -117,7 +117,7 @@ $PMF_LANG['msgHomeArticlesOnline'] = ' FAQ disponibili';
 $PMF_LANG['msgNoNews'] = 'Non ci sono news disponibili.';
 $PMF_LANG['msgLatestArticles'] = 'Le ultime 5 FAQ pubblicate';
 $PMF_LANG['msgMailThanks'] = 'Grazie per la tua proposta per una nuova FAQ.';
-$PMF_LANG['msgMailCheck'] = 'C\'&egrave; una nuova proposta per una FAQ!Per cortesia controlla la sezione \'Amministrazione\'.';
+$PMF_LANG['msgMailCheck'] = 'C\'è una nuova proposta per una FAQ! Controlla la sezione \'Amministrazione\'.';
 $PMF_LANG['msgMailContact'] = 'Il tuo messaggio &egrave; stato spedito all\'amministratore.';
 $PMF_LANG['err_noDatabase'] = 'Nessuna connessione al database disponibile.';
 $PMF_LANG['err_noHeaders'] = 'Nessuna categoria trovata.';
@@ -808,29 +808,29 @@ $LANG_CONF['records.enableDeleteQuestion'] = array(0 => 'checkbox', 1 => 'Delete
 $LANG_CONF['records.autosaveActive'] = array(0 => 'checkbox', 1 => 'Activate FAQ autosaving');
 $LANG_CONF['records.autosaveSecs'] = array(0 => 'input', 1 => 'Interval for autosaving in seconds, default 180');
 $LANG_CONF['main.maintenanceMode'] = array(0 => 'checkbox', 1 => 'Set FAQ in maintenance mode');
-$PMF_LANG['msgShowMore'] = 'show more';
-$PMF_LANG['msgQuestionAnswered'] = 'Question answered';
-$PMF_LANG['msgMessageQuestionAnswered'] = 'Your question at %s was answered. Please check it here:';
-$PMF_LANG['ad_stopwords_desc'] = 'Please select a language to add or edit stopwords.';
-$PMF_LANG['ad_visits_per_day'] = 'Visits per day';
-$PMF_LANG['ad_instance_add'] = 'Add a new phpMyFAQ multi site instance';
-$PMF_LANG['ad_instance_error_notwritable'] = 'The folder /multisite isn\'t writable.';
-$PMF_LANG['ad_instance_url'] = 'Instance URL';
-$PMF_LANG['ad_instance_path'] = 'Instance path';
-$PMF_LANG['ad_instance_name'] = 'Instance name';
-$PMF_LANG['ad_instance_email'] = 'Your admin email';
-$PMF_LANG['ad_instance_admin'] = 'Admin login name';
-$PMF_LANG['ad_instance_password'] = 'Admin password';
-$PMF_LANG['ad_instance_hint'] = 'Caution: It will take some seconds to create a new phpMyFAQ instance!';
-$PMF_LANG['ad_instance_button'] = 'Save instance';
-$PMF_LANG['ad_instance_error_cannotdelete'] = 'Could not delete instance ';
-$PMF_LANG['ad_instance_config'] = 'Instance configuration';
-$PMF_LANG['msgAboutThisNews'] = 'About this news';
-$PMF_LANG['msgAccessDenied'] = 'Access denied.';
-$PMF_LANG['msgSeeFAQinFrontend'] = 'See FAQ in Frontend';
-$LANG_CONF['records.randomSort'] = array(0 => 'checkbox', 1 => 'Sort FAQs randomly (default: deactivated)');
-$LANG_CONF['main.enableWysiwygEditorFrontend'] = array(0 => 'checkbox', 1 => 'Enable bundled WYSIWYG editor in frontend (default: disabled)');
-$LANG_CONF['main.enableGravatarSupport'] = array(0 => 'checkbox', 1 => 'Gravatar Support (default: disabled)');
+$PMF_LANG['msgShowMore'] = 'mostra di più';
+$PMF_LANG['msgQuestionAnswered'] = 'Domanda con risposta';
+$PMF_LANG['msgMessageQuestionAnswered'] = 'È stata appena fornita una risposta ala tua domanda su %s. Eccola:';
+$PMF_LANG['ad_stopwords_desc'] = 'Seleziona una lingua da aggiungere o modifica la lista di parole vietate.';
+$PMF_LANG['ad_visits_per_day'] = 'Visite giornaliere';
+$PMF_LANG['ad_instance_add'] = 'Aggiungi una nuova installazione phpMyFAQ multisito';
+$PMF_LANG['ad_instance_error_notwritable'] = 'La cartella /multisite non è scrivibile.';
+$PMF_LANG['ad_instance_url'] = 'URL dell\'installazione';
+$PMF_LANG['ad_instance_path'] = 'Percorso dell\'installazione';
+$PMF_LANG['ad_instance_name'] = 'Nome dell\'installazione';
+$PMF_LANG['ad_instance_email'] = 'E-mail da amministratore';
+$PMF_LANG['ad_instance_admin'] = 'Username da amministratore';
+$PMF_LANG['ad_instance_password'] = 'Password da amministratore';
+$PMF_LANG['ad_instance_hint'] = 'Attenzione: Saranno necessari alcuni minuti per creare una nuova installazione di phpMyFAQ!';
+$PMF_LANG['ad_instance_button'] = 'Salva installazione';
+$PMF_LANG['ad_instance_error_cannotdelete'] = 'Non è stato possibile eliminare l\'installazione';
+$PMF_LANG['ad_instance_config'] = 'Configurazione dell\'installazione';
+$PMF_LANG['msgAboutThisNews'] = 'Su queste news';
+$PMF_LANG['msgAccessDenied'] = 'Accesso vietato.';
+$PMF_LANG['msgSeeFAQinFrontend'] = 'Vedi la FAQ nel frontend';
+$LANG_CONF['records.randomSort'] = array(0 => 'checkbox', 1 => 'Ordina le FAQ in modo casuale (Valore predefinito: disattivato)');
+$LANG_CONF['main.enableWysiwygEditorFrontend'] = array(0 => 'checkbox', 1 => 'Abilita l\'editor di gruppo WYSIWYG nel frontend (Valore predefinito: disattivato)');
+$LANG_CONF['main.enableGravatarSupport'] = array(0 => 'checkbox', 1 => 'Supporto Gravatar(Valore predefinito: disattivato)');
 $PMF_LANG['msgTransToolRemove'] = 'Rimuovi';
 $PMF_LANG['msgTransToolLanguageNumberOfPlurals'] = 'Number of plural forms';
 $PMF_LANG['msgTransToolLanguageOnePlural'] = 'This language has only one plural form';
