@@ -6,6 +6,7 @@ CHANGELOG
 This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.8.26 - 2016-
+- updated Italian translation (Agnese Morettini)
 - fixed some minor bugs (Thorsten)
 
 Version 2.8.25 - 2015-12-05
